<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="13">

    <TextView
        android:id="@+id/net_status"
        android:text="@string/net_problem"
        android:gravity="center"
        android:padding="10dp"
        android:background="@color/md_red_300"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpage"
        android:layout_weight="12"
        android:layout_width="match_parent"
        android:layout_height="0dp">

    </android.support.v4.view.ViewPager>


    <LinearLayout
        android:gravity="center_vertical"
        android:background="@color/md_grey_100"
        android:id="@+id/bottom_menu"
        android:layout_weight="1"
        android:weightSum="8"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/first"
            android:text="@string/menu1"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/second"
            android:text="@string/menu3"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/third"
            android:text="@string/menu2"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/fourth"
            android:text="@string/menu4"
            android:gravity="center"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />


    </LinearLayout>
</LinearLayout>