<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rootview"
    android:layout_marginLeft="11dp"
    android:layout_marginRight="11dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/name"

            android:textSize="16dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/cardid"
            android:id="@+id/cardId"
            android:textSize="16dp"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:hint="@string/telnum"
            android:id="@+id/telnum"
            android:textSize="16dp"

            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <com.example.customview.validateview.ValidateView
            android:id="@+id/checkcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.example.customview.validateview.ValidateView>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkbox"
            android:checked="true"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/tips"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/md_red_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/checkbotton"
            android:layout_marginTop="14dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/roundcorner_blue"
            android:text="@string/jiance"
            android:layout_width="314dp"
            android:layout_height="38dp" />

</LinearLayout>