<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:layout_marginTop="70dp"
        android:id="@+id/username"
        android:hint="@string/username"
        android:textColor="@color/match_normal_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_toLeftOf="@+id/fixpwd"
            android:layout_centerVertical="true"
            android:textColor="@color/match_normal_tv"
            android:inputType="textPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />



        <TextView
            android:id="@+id/fixpwd"
            android:text="@string/forget"
            android:padding="5dp"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/roundcorner_gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>



</LinearLayout>